fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2865,5 +2865,5 @@ body {
 main {
   height: 100dvh;
   width: 100dvw;
-  overflow: hidden;
+  overflow: hidden !important;
 }
